--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -346,7 +346,7 @@ body {
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            box-shadow: none;
+            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
             a {
               width: 100%;
