--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,9 @@ $secondaryColor: #2c2c2c;
 $accentColor: #00a0ff;
 $textColor: #f5f5f5;
 
+html {
+  scroll-behavior: smooth;
+}
 * {
   font-family: 'Lato', sans-serif;
 }
@@ -41,22 +44,19 @@ body {
         padding: 1rem;
         border-radius: 0.5rem;
 
-        li {
+        a {
           list-style: none;
+          text-transform: uppercase;
+          text-decoration: none;
+          color: $textColor;
+          letter-spacing: 3px;
 
-          a {
-            text-transform: uppercase;
-            text-decoration: none;
-            color: $textColor;
-            letter-spacing: 3px;
-
-            &:hover {
-              transition: all ease-in 0.3s;
-              text-decoration: underline;
-              text-decoration-color: $accentColor;
-              text-decoration-thickness: 5px;
-              text-underline-offset: 0.5rem;
-            }
+          &:hover {
+            transition: all ease-in 0.3s;
+            text-decoration: underline;
+            text-decoration-color: $accentColor;
+            text-decoration-thickness: 5px;
+            text-underline-offset: 0.5rem;
           }
         }
 
