--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,9 +10,6 @@ $secondaryColor: #2c2c2c;
 $accentColor: #00a0ff;
 $textColor: #f5f5f5;
 
-html {
-  scroll-behavior: smooth;
-}
 * {
   font-family: 'Lato', sans-serif;
 }
@@ -78,6 +75,7 @@ body {
             background-color: $secondaryColor;
             color: $textColor;
             transition: all ease-in 0.2s;
+            text-decoration: none;
           }
         }
       }
