added some padding left/right on the jumbotron

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -125,12 +125,12 @@ body {
       flex-direction: column;
       gap: 1rem;
       margin-top: 4rem;
+      padding-inline: 1rem;
 
       h1 {
         text-align: center;
         text-transform: uppercase;
         letter-spacing: 3px;
-
         span {
           color: #00a0ff;
         }
