--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,5 @@
 @use '_reset.scss';
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
-@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wghtfont@300;400;700&display=swap');
 @import url('https://emoji-css.afeld.me/emoji.css');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css');
 @import url('https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css');
@@ -12,6 +11,7 @@ $textColor: #f5f5f5;
 
 * {
   font-family: 'Lato', sans-serif;
+  font-display: swap;
 }
 
 body {
