--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -293,6 +293,8 @@ body {
 
           img {
             margin: auto;
+            max-width: 500px;
+            max-height: 243px;
           }
 
           h2 {
@@ -337,6 +339,25 @@ body {
             box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
             gap: 1rem;
             margin-bottom: 1rem;
+          }
+
+          .usernamePasswordContainer {
+            margin-bottom: 1rem;
+            display: flex;
+            justify-content: center;
+            align-items: baseline;
+            flex-direction: column;
+            gap: 1rem;
+            p {
+              box-shadow: none;
+              padding: 0;
+              margin: 0;
+
+              span {
+                font-style: italic;
+                font-weight: 300;
+              }
+            }
           }
 
           .btnContainer {
@@ -544,10 +565,6 @@ body {
           place-items: center;
           .aboutMeContent {
             padding: 2rem;
-
-            // p {
-            //   font-size: 1.2rem;
-            // }
           }
         }
       }
@@ -564,6 +581,7 @@ body {
       .mainProjectsContainer {
         .projectsContainer {
           grid-template-columns: repeat(3, 1fr);
+
           div {
             padding: 2rem;
           }
@@ -575,20 +593,6 @@ body {
           padding: 2rem;
           form {
             width: 80vw;
-
-            .formGroup {
-              // input {
-              //   &::placeholder {
-              //     font-size: 1.2rem;
-              //   }
-              // }
-            }
-
-            // textarea {
-            //   &::placeholder {
-            //     font-size: 1.2rem;
-            //   }
-            // }
 
             button {
               width: 50%;
