--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,10 @@ $textColor: #f5f5f5;
   font-display: swap;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: $primaryColor;
   color: $textColor;
@@ -553,6 +557,19 @@ body {
 
           form {
             width: 90vw;
+          }
+        }
+      }
+    }
+
+    @media only screen and (min-width: 1200px) {
+      .skillsMainContainer {
+        .skillsContainer {
+          div {
+            &:hover {
+              animation: shakeX;
+              animation-duration: 2s;
+            }
           }
         }
       }
